fix copy button + scrollbar

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -198,13 +198,13 @@ img {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(144, 144, 144, 0.5);
     -webkit-border-radius: 0px;
     border-radius: 0px;
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(144, 144, 144, 0.5);
 }
 
 .fourzerofour {
